--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.5.0"
   }
 }
